# docs/swagger.json
@@ -2296,20 +2296,6 @@
                         "required": true
                     },
                     {
-                        "type": "string",
-                        "description": "Área del Mensaje",
-                        "name": "area",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "boolean",
-                        "description": "Procesado",
-                        "name": "procesado",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
                         "type": "file",
                         "description": "Imagen del Mensaje",
                         "name": "imagen",
@@ -3938,6 +3924,65 @@
                 }
             }
         },
+        "/users/{id}/messages": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Obtiene todos los mensajes asociados al ID de un usuario proporcionado",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Obtiene los mensajes asociados a un ID de usuario",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "ID del usuario",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Mensaje"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/users/{id}/otp-setup": {
             "get": {
                 "security": [
@@ -4854,6 +4899,12 @@
         "models.CreateUserRequest": {
             "type": "object",
             "properties": {
+                "adi": {
+                    "type": "string"
+                },
+                "alias": {
+                    "type": "string"
+                },
                 "apellido": {
                     "type": "string"
                 },
@@ -4867,6 +4918,12 @@
                     "type": "string"
                 },
                 "credencial": {
+                    "type": "string"
+                },
+                "descripcion": {
+                    "type": "string"
+                },
+                "fecha_nacimiento": {
                     "type": "string"
                 },
                 "nivel": {
@@ -4885,6 +4942,9 @@
                     "type": "string"
                 },
                 "tie": {
+                    "type": "string"
+                },
+                "zodi": {
                     "type": "string"
                 }
             }
@@ -5493,6 +5553,9 @@
                 "adi": {
                     "type": "string"
                 },
+                "alias": {
+                    "type": "string"
+                },
                 "apellido": {
                     "type": "string"
                 },
@@ -5509,6 +5572,12 @@
                     "type": "string"
                 },
                 "credencial": {
+                    "type": "string"
+                },
+                "descripcion": {
+                    "type": "string"
+                },
+                "fecha_nacimiento": {
                     "type": "string"
                 },
                 "hash": {
@@ -5542,6 +5611,9 @@
                     "type": "string"
                 },
                 "updated_at": {
+                    "type": "string"
+                },
+                "zodi": {
                     "type": "string"
                 }
             }
